fix: image overlap
Add a bit of margin after the project grid to space the images out
better.

--- a/src/app/work/work.component.css
+++ b/src/app/work/work.component.css
@@ -9,6 +9,7 @@ a {
 .project {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  margin-bottom: 5px;
 }
 
 .project-title {
